fix capsule gap

--- a/client/src/components/HomeSections/Sections/FindMeElseWhere/FindMeElseWhere.module.scss
+++ b/client/src/components/HomeSections/Sections/FindMeElseWhere/FindMeElseWhere.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/sass/media';
+
 .FindMeElseWhere {
   ul {
     margin-bottom: 2rem;
@@ -12,9 +14,16 @@
   }
 
   .Holder {
-    margin-bottom: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    @include respond(df, sm) {
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 0.5rem 1rem;
+    }
+    // margin-bottom: 2rem;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
   }
 }
